# cmake_lib_test

./: README.md  func-utils-lib-test.pc  gio-2.0.pc  main.c
func-utils-lib-test-1.0.0/: CMakeLists.txt
func-utils-lib-test-1.0.0/debian/: changelog  control  debhelper-build-stamp  files  rules
func-utils-lib-test-1.0.0/debian/.debhelper/func-utils-lib-test/: dbgsym-build-ids
func-utils-lib-test-1.0.0/debian/.debhelper/func-utils-lib-test/dbgsym-root/DEBIAN/: control  md5sums
func-utils-lib-test-1.0.0/debian/func-utils-lib-test/DEBIAN/: control  md5sums  shlibs
func-utils-lib-test-1.0.0/debian/func-utils-lib-test/usr/include/func_utils/: func_utils.h
func-utils-lib-test-1.0.0/debian/func-utils-lib-test/usr/share/doc/func-utils-lib-test/: copyright
func-utils-lib-test-1.0.0/src/: CMakeLists.txt
func-utils-lib-test-1.0.0/src/utils/: func_utils.c
func-utils-lib-test-1.0.0/test/: CMakeLists.txt  main.c
